# Sanitune

./: .coderabbit.yaml  .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  stale.yml
src/sanitune/: __init__.py  __main__.py  ai_suggest.py  cli.py  config.py  detector.py  editor.py  kits_client.py  lyrics.py  pipeline.py  remixer.py  replacer.py  separator.py  transcriber.py  tts.py  voice_converter.py  web.py
src/sanitune/mappings/: __init__.py  en.json  es.json
src/sanitune/wordlists/: en.txt  es.txt
tests/: conftest.py  test_ai_suggest.py  test_cli.py  test_config.py  test_detector.py  test_editor.py  test_kits_client.py  test_lyrics.py  test_mappings.py  test_pipeline.py  test_remixer.py  test_replacer.py  test_separator.py  test_transcriber.py  test_tts.py  test_voice_converter.py  test_web.py
